plugins {
    id 'java-library'
    id 'application'
}

allprojects {
    repositories {
        mavenCentral()
        maven { url 'https://jitpack.io' }
    }
}

subprojects {
    apply plugin: 'java-library'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.compilerArgs += [
            '--enable-preview'
        ]
    }

    tasks.withType(JavaExec).configureEach {
        jvmArgs += [
            '--enable-preview',
            '--enable-native-access=ALL-UNNAMED'
        ]
    }

    dependencies {
        testImplementation libs.junit.api
        testRuntimeOnly libs.junit.engine
    }

    test {
        useJUnitPlatform()
    }
}
